--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -7,6 +7,9 @@
     ).html_safe
     %>
   <% end %>
+  window.assets = {
+    logo: "<%= image_url('logo.png') %>"
+  }
 </script>
 
 <main id="root"></main>
