--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -71,57 +71,57 @@ img {
 .form-header {
   display: block;
   margin: 20px;
+  text-align: center;
   font-size: 28px;
   font-family: 'Ubuntu', sans-serif;
-  text-align: center;
 }
 
 .form-main {
   display: block;
   width: 500px;
-  border: 1px solid #aaa;
   margin: 0 auto;
+  border: 1px solid #aaa;
 }
 
 .form-footer {
   display: block;
-  text-align: center;
   margin: 40px 0;
+  text-align: center;
   font-size: 14px;
 }
 
 .logo {
   display: block;
-  margin: 0 auto;
   width: auto;
   height: 180px;
+  margin: 0 auto;
 }
 
 .form-input {
   display: block;
-  padding: 20px 0 0 0;
   width: 320px;
   margin: 0 auto;
+  padding: 20px 0 0 0;
 }
 
 .form-input > input {
   display: block;
+  width: 100%;
   border: 1px solid #aaa;
   border-radius: 7px;
-  width: 100%;
   padding: 5px;
 }
 
 .submit-button {
   display: block;
+  width: 320px;
+  margin: 20px auto 20px auto;
   border: 1px solid #1fae52;
   border-radius: 7px;
+  padding: 20px 40px;
+  background: #2dbe60;
   text-align: center;
   color: #fff;
-  background: #2dbe60;
-  width: 320px;
-  padding: 20px 40px;
-  margin: 20px auto 20px auto;
 }
 
 .submit-button:hover {
@@ -139,14 +139,13 @@ img {
 }
 
 .guest-button {
+  margin: 0 0 10px 0;
   border: 1px solid #2dbe60;
-  border-radius: 7x;
+  border-radius: 7px;
   padding: 5px;
   background: #2dbe60;
-  color: white;
-  border-radius: 7px;
-  margin: 0 0 10px 0;
   text-align: center;
+  color: white;
 }
 
 .guest-button:hover {
@@ -159,5 +158,6 @@ img {
 }
 
 .page-change:hover {
+  cursor: pointer;
   opacity: 0.75;
 }
