Fix React routing

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -8,7 +8,8 @@
     %>
   <% end %>
   window.assets = {
-    logo: "<%= image_url('logo.png') %>"
+    logo: "<%= image_url('logo.png') %>",
+    logo_wordless: "<%= image_url('logo_wordless.png') %>"
   }
 </script>
 
