Add images to sidebar

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -9,7 +9,12 @@
   <% end %>
   window.assets = {
     logo: "<%= image_url('logo.png') %>",
-    logo_wordless: "<%= image_url('logo_wordless.png') %>"
+    logo_wordless: "<%= image_url('logo_wordless.png') %>",
+    new_note: "<%= image_url('new_note.png') %>",
+    search: "<%= image_url('search.png') %>",
+    notes: "<%= image_url('notes.png') %>",
+    notebooks: "<%= image_url('notebooks.png') %>",
+    tags: "<%= image_url('tags.png') %>"
   }
 </script>
 
