--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -9,7 +9,7 @@
   <% end %>
   window.assets = {
     logo: "<%= image_url('logo.png') %>",
-    logo_wordless: "<%= image_url('logo_wordless.png') %>",
+    wordless_logo: "<%= image_url('wordless_logo.png') %>",
     new_note: "<%= image_url('new_note.png') %>",
     search: "<%= image_url('search.png') %>",
     notes: "<%= image_url('notes.png') %>",
