Fix bug that occurs when refreshing note route

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -224,8 +224,8 @@ img {
 
 .logout-button {
   position: absolute;
-  bottom: 0;
-  left: 0;
+  top: 0;
+  right: 0;
   width: 100px;
   border: 1px solid #1fae52;
   background: #2dbe60;
