Add destroyNote to Note

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -14,7 +14,8 @@
     search: "<%= image_url('search.png') %>",
     notes: "<%= image_url('notes.png') %>",
     notebooks: "<%= image_url('notebooks.png') %>",
-    tags: "<%= image_url('tags.png') %>"
+    tags: "<%= image_url('tags.png') %>",
+    trash: "<%= image_url('trash.png') %>"
   }
 </script>
 
