--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -312,6 +312,28 @@ img {
   font-size: 36px;
 }
 
+.note > img {
+  float: right;
+  width: 50px;
+  height: 50px;
+  margin: 10px 0;
+  border: 1px solid #aaa;
+}
+
+.note > img:hover {
+  cursor: pointer;
+  opacity: 0.75;
+}
+
+.note-error {
+  display: block;
+  width: 250px;
+  margin: 0 auto;
+  color: #f00;
+  text-align: center;
+  font-weight: bold;
+}
+
 .note-form-input {
   display: block;
   margin: 10px 0;
@@ -325,7 +347,7 @@ img {
 
 .note-notebook_id-input-field {
   display: block;
-  width: 100%;
+  width: 25%;
   border: 1px solid #aaa;
   padding: 5px;
 }
@@ -365,13 +387,4 @@ img {
 .note-submit-button:hover {
   cursor: pointer;
   opacity: 0.75;
-}
-
-.note-error {
-  display: block;
-  margin: 0 auto;
-  width: 250px;
-  color: #f00;
-  text-align: center;
-  font-weight: bold;
 }
