--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -164,22 +164,18 @@ img {
 
 /* --- HOME --- */
 
-.home {
-  width: 100vw;
-  height: 100vh;
-}
-
 .home-sidebar {
   display: block;
   float: left;
-  width: 5%;
+  width: 70px;
+  height: 100vh;
+  overflow-y: scroll;
 }
 
 .home-main {
   display: block;
   float: left;
-  width: 95%;
-  height: 100vh;
+  width: calc(100vw - 70px);
   position: relative;
 }
 
@@ -243,8 +239,7 @@ img {
 .notes-index {
   display: block;
   float: left;
-  width: 25%;
-  height: 100vh;
+  width: 330px;
   border-left: 1px solid #aaa;
   border-right: 1px solid #aaa;
 }
@@ -252,11 +247,12 @@ img {
 .notes-index-child {
   display: block;
   float: left;
-  width: 75%;
+  width: calc(100vw - 400px);
 }
 
 .notes-index-header {
   display: block;
+  height: 86px;
   padding: 10px;
   border-bottom: 1px solid #aaa;
 }
@@ -266,6 +262,11 @@ img {
   font-family: 'Ubuntu', sans-serif;
   font-weight: bold;
   font-size: 36px;
+}
+
+.notes-index-main {
+  height: calc(100vh - 86px);
+  overflow-y: scroll;
 }
 
 .notes-index-item {
@@ -301,10 +302,14 @@ img {
 /* --- NOTE --- */
 
 .note {
+  display: block;
+  height: 100vh;
   padding: 30px 50px;
+  overflow-y: scroll;
 }
 
 .note > h1 {
+  margin: 0 0 10px 0;
   font-family: 'Ubuntu', sans-serif;
   font-weight: bold;
   font-size: 36px;
@@ -314,7 +319,6 @@ img {
   float: right;
   width: 50px;
   height: 50px;
-  margin: 10px 0;
   border: 1px solid #aaa;
 }
 
@@ -365,7 +369,7 @@ img {
 .note-form-input > textarea {
   display: block;
   width: 100%;
-  height: 250px;
+  height: 300px;
   border: 1px solid #aaa;
   padding: 10px;
 }
