--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -271,7 +271,7 @@ img {
 
 .notes-index-item {
   display: block;
-  height: 120px;
+  height: 131px;
   padding: 10px;
   border-bottom: 1px solid #aaa;
   overflow: hidden;
@@ -295,7 +295,7 @@ img {
 }
 
 .notes-index-item p {
-  padding: 5px 0 0 0;
+  padding: 5px 0;
   word-wrap: break-word;
 }
 
