--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -15,7 +15,8 @@
     notes: "<%= image_url('notes.png') %>",
     notebooks: "<%= image_url('notebooks.png') %>",
     tags: "<%= image_url('tags.png') %>",
-    trash: "<%= image_url('trash.png') %>"
+    trash: "<%= image_url('trash.png') %>",
+    new_notebook: "<%= image_url('new_notebook.png') %>"
   }
 </script>
 
