--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -397,3 +397,187 @@ img {
   cursor: pointer;
   opacity: 0.75;
 }
+
+/* --- NOTEBOOKS --- */
+
+.notebooks-index {
+  display: block;
+  float: left;
+  width: 330px;
+  border-left: 1px solid #aaa;
+  border-right: 1px solid #aaa;
+}
+
+.notebooks-index-child {
+  display: block;
+  float: left;
+  width: calc(100vw - 400px);
+}
+
+.notebooks-index-header {
+  display: block;
+  height: 86px;
+  padding: 10px;
+  border-bottom: 1px solid #aaa;
+}
+
+.notebooks-index-header-text {
+  display: block;
+  float: left;
+}
+
+.notebooks-index-header h1 {
+  padding: 0 0 5px 0;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
+  font-size: 36px;
+}
+
+.new-notebook-icon {
+  float: right;
+  width: 50px;
+  height: 50px;
+  border: 1px solid #aaa;
+}
+
+.notebooks-index-main {
+  height: calc(100vh - 86px);
+  overflow-y: scroll;
+}
+
+.notebooks-index-item-wrapper {
+  border-bottom: 1px solid #aaa;
+}
+
+.notebooks-index-item-wrapper:last-child {
+  border-bottom: 0;
+}
+
+.notebooks-index-item {
+  display: block;
+  height: 131px;
+  padding: 10px;
+  overflow: hidden;
+}
+
+.notebooks-index-item:hover {
+  cursor: pointer;
+  background: #2dbe60;
+  color: #fff;
+}
+
+.notebooks-index-item h2 {
+  word-wrap: break-word;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.notebooks-index-item p {
+  padding: 5px 0;
+  word-wrap: break-word;
+}
+
+.notebook-update-link {
+  margin: 0 5px;
+  border: 1px solid #1fae52;
+  border-radius: 7px;
+  padding: 0 5px;
+  background: #2dbe60;
+  color: #fff;
+}
+
+.notebook-update-link:hover {
+  cursor: pointer;
+  background: #fff;
+  color: #1fae52;
+}
+
+/* --- NOTEBOOK --- */
+
+.notebook {
+  display: block;
+  height: 100vh;
+  padding: 30px 50px;
+  overflow-y: scroll;
+}
+
+.notebook > h1 {
+  margin: 0 0 10px 0;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
+  font-size: 36px;
+}
+
+.notebook > img {
+  float: right;
+  width: 50px;
+  height: 50px;
+  border: 1px solid #aaa;
+}
+
+.notebook > img:hover {
+  cursor: pointer;
+  opacity: 0.75;
+}
+
+.notebook-error {
+  display: block;
+  width: 250px;
+  margin: 0 auto;
+  color: #f00;
+  text-align: center;
+  font-weight: bold;
+}
+
+.notebook-form {
+  display: block;
+}
+
+.notebook-form-input {
+  display: block;
+  margin: 10px 0;
+}
+
+.notebook-form-input > label {
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.notebook-title-input-field {
+  display: block;
+  width: 100%;
+  height: 50px;
+  border: 1px solid #aaa;
+  padding: 10px;
+  color: #1fae52;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.notebook-form-input > textarea {
+  display: block;
+  width: 100%;
+  height: 300px;
+  border: 1px solid #aaa;
+  padding: 10px;
+}
+
+.notebook-submit-button {
+  display: block;
+  float: right;
+  padding: 5px 10px;
+  border: 1px solid #1fae52;
+  background: #2dbe60;
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.notebook-submit-button:hover {
+  cursor: pointer;
+  opacity: 0.75;
+}
