Fix bugs in creating tags

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -16,7 +16,8 @@
     notebooks: "<%= image_url('notebooks.png') %>",
     tags: "<%= image_url('tags.png') %>",
     trash: "<%= image_url('trash.png') %>",
-    new_notebook: "<%= image_url('new_notebook.png') %>"
+    new_notebook: "<%= image_url('new_notebook.png') %>",
+    new_tag: "<%= image_url('new_tag.png') %>"
   }
 </script>
 
