--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -248,7 +248,7 @@ img {
   border-right: 1px solid #aaa;
 }
 
-.notes-index-child {
+.notes-index-children {
   display: block;
   float: left;
   width: calc(100vw - 400px);
@@ -412,7 +412,7 @@ img {
   border-right: 1px solid #aaa;
 }
 
-.notebooks-index-child {
+.notebooks-index-children {
   display: block;
   float: left;
   width: calc(100vw - 400px);
@@ -584,4 +584,11 @@ img {
 .notebook-submit-button:hover {
   cursor: pointer;
   opacity: 0.75;
+}
+
+/* --- TAG --- */
+
+.new-tag-icon {
+  width: 50px;
+  height: 50px;
 }
