--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -369,9 +369,10 @@ img {
   display: block;
   width: 250px;
   margin: 0 auto;
-  color: #f00;
   text-align: center;
-  font-weight: bold;
+  font-family: gotham, helvetica, arial, sans-serif;
+  font-size: 14px;
+  color: #f00;
 }
 
 .note-form {
@@ -656,14 +657,14 @@ img {
 
 .note-new-tag-icon {
   float: left;
-  width: 22px;
-  height: 22px;
+  width: 38px;
+  height: 38px;
   border: 1px solid #ececec;
 }
 
 .note-tags {
   float: left;
-  width: calc(100% - 58px);
+  width: calc(100% - 74px);
 
 }
 
@@ -677,6 +678,6 @@ img {
 }
 
 .tag-trash-icon {
-  width: 18px;
-  height: 18px;
+  width: 38px;
+  height: 38px;
 }
