--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -357,6 +357,7 @@ img {
   float: right;
   width: 36px;
   height: 36px;
+  margin: 0 48px 0 0;
   border: 1px solid #ececec;
 }
 
@@ -380,7 +381,7 @@ img {
 }
 
 .note-form-select {
-  padding: 51px 0 0 0;
+  padding: 48px 0 0 0;
 }
 
 .note-form-select > label {
@@ -584,6 +585,7 @@ img {
   float: right;
   width: 36px;
   height: 36px;
+  margin: 0 48px 0 0;
   border: 1px solid #ececec;
 }
 
@@ -593,6 +595,7 @@ img {
 }
 
 .notebook > p {
+  margin: 0 0 0 48px;
   padding: 0 0 44px 0;
   font-family: gotham, helvetica, arial, sans-serif;
   font-size: 14px;
@@ -669,6 +672,7 @@ img {
   float: left;
   width: 38px;
   height: 38px;
+  margin: 0 0 10px 48px;
   border: 1px solid #ececec;
 }
 
@@ -679,8 +683,7 @@ img {
 
 .note-tags {
   float: left;
-  width: calc(100% - 86px);
-
+  width: calc(100% - 182px);
 }
 
 .note-tags-index-tag-wrapper {
