Set up avatar upload frontend

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -179,7 +179,7 @@ img {
   position: relative;
 }
 
-.sidebar-logo {
+.sidebar-avatar {
   width: 36px;
   height: 36px;
   margin: 12px auto 6px auto;
